<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hourBg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="horizontal"
    app:cardCornerRadius="5dp"
    app:contentPadding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHourDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHourTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHourTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivHourWeather"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:srcCompat="@drawable/i01d" />

        <TextView
            android:id="@+id/tvHourDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/description"
            android:textAlignment="center"


            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="italic"

            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"



            />
    </LinearLayout>
</androidx.cardview.widget.CardView>